--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.config.json",
+            "browserTarget": "technote_project:build" },
           "configurations": {
             "production": {
               "browserTarget": "L2I-FRONT:build:production"
