--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "^14.1.0",
     "@types/swiper": "^6.0.0",
     "base64-js": "^1.5.1",
-    "ngx-cookie-service": "^16.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
